<resources>
    <string name="app_name">loginAppAS</string>

    <string name="header">Rejestruj konto</string>
    <string name="email">Podaj e-mail:</string>
    <string name="pass">Podaj hasło:</string>
    <string name="passConfirm">Powtórz hasło:</string>
    <string name="emailInput">ewa@poczta.pl</string>
    <string name="passInput">abcDef</string>
    <string name="greet">Witaj ewa@poczta.pl</string>
</resources>