<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/android_green"
            android:text="@string/header"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/emailInput" />

        <TextView
            android:id="@+id/labelPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass" />

        <EditText
            android:id="@+id/textPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/passInput" />

        <TextView
            android:id="@+id/labelPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passConfirm" />

        <EditText
            android:id="@+id/textPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/passInput"  />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/labelHelloUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greet"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>